# strawberry_graphql_django

./: README.md  pyproject.toml
strawberry_django_tutorial/: manage.py  pytest.ini
strawberry_django_tutorial/book/: schema.py  urls.py
strawberry_django_tutorial/book/migrations/: 0001_initial.py
strawberry_django_tutorial/strawberry_django_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
strawberry_django_tutorial/strawberry_django_tutorial/tests/: test_graphql.py
